Enhance offline mode management

--- a/offline/doc.html
+++ b/offline/doc.html
@@ -33,7 +33,7 @@
 						<button type="submit" class="btn btn-default">Access</button>
 					</form>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="/list">List</a></li>
+						<li><a href="/list"><span class="glyphicon glyphicon-list"></span>&nbsp;List</a></li>
 					</ul>
 				</div><!--/.nav-collapse -->
 			</div>
