--- a/offline/list.html
+++ b/offline/list.html
@@ -89,6 +89,7 @@
 		<script src="/assets/js/highlightjs.min.js"></script>
 		<script src ="/assets/js/mute.js"></script>
 		<script src="/assets/js/dbjs/src/db.js"></script>
+		<script src="/assets/js/db-helper.js"></script>
        	<script>
        		function accessDoc() {
        			location.href = '/doc/' + $('#access-document').val();
@@ -106,25 +107,7 @@
 			if ( location.hash !== '#iframed' ) {
 				// We only want to render and use the page if we're not in the hidden iframe
 				var serverDB;
-	       		db.open({
-	                server: 'mute',
-	                version: 1,
-	                schema: {
-	                    models: {
-	                        key: { keyPath: 'id' , autoIncrement: true },
-	                        // Optionally add indexes
-	                        indexes: {
-	                            creationDate: {},
-	                            docID: { unique: true },
-	                            history: {},
-	                            lastModificationDate: {},
-	                            replicaNumber: {},
-	                            ropes: {},
-	                            bufferLocalLogootSOp: {}
-	                        }
-	                    }
-	                }
-	            })
+	       		openDB()
 	            .done(function (s) {
 	                serverDB = s
 	               	serverDB.models.query()
