--- a/offline/doc.html
+++ b/offline/doc.html
@@ -102,71 +102,71 @@
             var docID = getDocID();
             $('#docTitle').html(docID);
             
-            $(function() ***REMOVED***
-			    $('#access-document').keypress(function(e) ***REMOVED***
+            $(function() {
+			    $('#access-document').keypress(function(e) {
 			            // Enter pressed?
-			            if(e.which === 10 || e.which === 13) ***REMOVED***
+			            if(e.which === 10 || e.which === 13) {
 			                accessDoc();
-			        ***REMOVED***
-			 ***REMOVED***);
-			***REMOVED***);
+			            }
+			     });
+			});
 
        		openDB()
-            .done(function (s) ***REMOVED***
+            .done(function (s) {
                 serverDB = s
                	serverDB.models.query()
                	.filter('docID', docID)
                	.execute()
-               	.done(function (results) ***REMOVED***
+               	.done(function (results) {
                		console.log('Yo');
-               		if(results.length>0) ***REMOVED***
+               		if(results.length>0) {
                			coordinator = new Mute.Coordinator(docID, serverDB);
                 		editor = new Mute.AceEditorAdapter('editor', coordinator);
                         infosUsersModule = new Mute.InfosUsersModule('<%= docID %>', coordinator, editor, null, null, serverDB);
                         editor.setInfosUsersModule(infosUsersModule);
                 		coordinator.setEditor(editor);
                 		
-                		coordinator.on('updateHistoryScroller', function (data) ***REMOVED***
+                		coordinator.on('updateHistoryScroller', function (data) {
 		                    $('#range').attr('max', data.length).attr('value', data.length);
 		                    displayState();
-		            ***REMOVED***);
+		                });
 
                 		console.log('avant init ?');
                 		coordinator.init();
                 		coordinator.toOfflineMode();
-               		***REMOVED***
-               		else ***REMOVED***
+               		}
+               		else {
                			location.href = '/list';
-               		***REMOVED***
-               	***REMOVED***);
-        ***REMOVED***);
+               		}
+               	});
+            });
 
             var currentState = 0;
             var str = '';
 
-            function prevState() ***REMOVED***
+            function prevState() {
                 $('#range').val(currentState-1);
                 displayState();
-        ***REMOVED***
+            }
 
-            function nextState() ***REMOVED***
+            function nextState() {
                 $('#range').val(currentState+1);
                 displayState();
-        ***REMOVED***
+            }
 
-            function displayState() ***REMOVED***
+            function displayState() {
                 var newState = parseInt($('#range').val());
                 $('#rangePrimary').val(newState);
                 str = coordinator.updateState(str, currentState, newState);
                 currentState = newState;
                 editor.editor.session.doc.setValue(str);
-        ***REMOVED***
+            }
 
-            function getDocID() ***REMOVED***
+            function getDocID() {
             	return location.href.substr(location.href.lastIndexOf('/') + 1);
-        ***REMOVED***
+            }
 
-            function switchToHistoryMode() ***REMOVED***
+            function switchToHistoryMode() {
             	var length = coordinator.getHistoryLength();
             	$('#btnHistoryMode').addClass('hide');
             	$('#btnEditionMode').removeClass('hide');
@@ -174,15 +174,15 @@
             	coordinator.editor.toHistoryMode();
             	$('#range').attr('max', length);
             	displayState();
-        ***REMOVED***
+            }
 
-            function switchToEditionMode() ***REMOVED***
+            function switchToEditionMode() {
             	$('#btnEditionMode').addClass('hide');
             	$('#historySlider').addClass('hide');
             	$('#btnHistoryMode').removeClass('hide');
             	editor.editor.session.doc.setValue(coordinator.ropes.str);
             	coordinator.editor.toEditionMode();
-        ***REMOVED***
+            }
    		</script>
     </body>
 </html>
